<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activites.LifeCycleActivity">

    <Button
        android:id="@+id/activity_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_example" />

    <Button
        android:id="@+id/service_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_example" />

    <Button
        android:id="@+id/broadcast_receivers_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_receivers_example" />

    <Button
        android:id="@+id/content_providers_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_providers_example" />

    <Button
        android:id="@+id/content_resolver_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_resolver_example" />
</LinearLayout>